# docs/swagger.yaml
@@ -355,6 +355,14 @@ definitions:
     type: object
   controller.InitToolsResponse:
     properties:
+      telegram_url:
+        description: Telegram 地址
+        example: https://t.me/example
+        type: string
+      telegram_enabled:
+        description: Telegram 入口开关(on=开启,off=关闭)
+        example: "on"
+        type: string
       clean_memory_enabled:
         description: 清理内存入口开关(on=开启,off=关闭)
         example: "on"
